Fix camera icon spacing

--- a/themes/rocinante-2/assets/css/rocinante.scss
+++ b/themes/rocinante-2/assets/css/rocinante.scss
@@ -267,8 +267,8 @@ header h2 {
       padding-right: 5px;
     }
     .label {
-      margin-left: -5px;
-      margin-right: 5px;
+      margin-left: -2.5px;
+      margin-right: 2.5px;
     }
 
     &:hover {
